--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,36 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+jsonld: |
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "NXNote",
+      "alternateName": "XSAP Note",
+      "applicationCategory": "BusinessApplication",
+      "applicationSubCategory": "Knowledge Management",
+      "operatingSystem": "Windows",
+      "softwareVersion": "2.0",
+      "datePublished": "2025-10-24",
+      "programmingLanguage": "Dart",
+      "url": "https://xsap.net",
+      "image": "https://xsap.net/assets/images/nxxii.png",
+      "description": "NXNote is a professional AI-powered knowledge management software for SAP experts, designed to organize SAP documentation, process diagrams, project plans, and intelligent workflows. It integrates seamlessly with SAP systems and AI-driven email automation.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Shanghai Niaoxun Information Technology Co., Ltd",
+        "url": "https://nxxii.com",
+        "sameAs": [
+          "https://www.wikidata.org/wiki/Q136653173",
+          "https://github.com/nxnote",
+          "https://xsap.net"
+        ],
+        "logo": "https://xsap.net/assets/images/nxxii.png"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "20",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      }
+    }
